# pci-rs

./: .gitmodules  Cargo.toml
.github/workflows/: ci.yml  release.yml
examples/: lspci.rs
src/: cfgmgr32.rs  ecam.rs  error.rs  ids.rs  io.rs  io_port.rs  lib.rs  parser.rs
tools/: gen.rs  gen.sh
