[package]
name = "pci"
version = "0.1.0"
authors = ["9506hqwy"]
edition = "2021"
rust-version = "1.60"
repository = "https://github.com/9506hqwy/pci-rs"
license = "MIT OR Apache-2.0"
keywords = ["pci"]
categories = ["development-tools"]

[dependencies]
libc = "0.2.126"
once_cell = "1.13.0"

[dev-dependencies]
quote = "*"

[[example]]
name = "ids-gen"
path = "tools/gen.rs"

[profile.release]
strip = "symbols"
lto = true
opt-level = "z"
