[package]
name = "pci"
version = "0.1.0"
authors = ["9506hqwy"]
edition = "2021"
rust-version = "1.70"
repository = "https://github.com/9506hqwy/pci-rs"
license = "MIT OR Apache-2.0"
keywords = ["pci"]
categories = ["development-tools"]

[dependencies]
acpi = { git="https://github.com/9506hqwy/acpi-rs" }
bytes = "1.5.0"
libc = "0.2.126"
nom = "7.1.3"
once_cell = "1.13.0"

[profile.release]
strip = "symbols"
lto = true
