[package]
name = "pci"
version = "0.1.0"
authors = ["9506hqwy"]
edition = "2024"
rust-version = "1.85"
repository = "https://github.com/9506hqwy/pci-rs"
license = "MIT OR Apache-2.0"
keywords = ["pci"]
categories = ["development-tools"]

[dependencies]
acpi = { git = "https://github.com/9506hqwy/acpi-rs" }
bytes = "1.5.0"
nom = "8.0.0"
once_cell = "1.13.0"

[target.'cfg(unix)'.dependencies.libc]
version = "0.2.126"

[target.'cfg(windows)'.dependencies.windows]
version = "0.62.1"
features = [
  "Win32_Foundation",
  "Win32_Devices_DeviceAndDriverInstallation",
  "Win32_Devices_FunctionDiscovery",
  "Win32_Devices_Properties",
  "Win32_Globalization",
  "Win32_UI_Shell_PropertiesSystem",
]

[profile.release]
strip = "symbols"
lto = true
